--- a/lesson3/lesson-3-index.html
+++ b/lesson3/lesson-3-index.html
@@ -6,25 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lesson 3 for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <title>Learning for All</title>
+    <link rel="stylesheet" href="css\lesson-3-index.css" />
+    <title>Home</title>
 </head>
-<header>Insert Logo here</header>
+<header>
+    <h1>Learning 4 All</h1>
+    <!-- Image Size: 305 x 213 -->
+    <img src="images\education-logo.jpg" alt="Logo">
+</header>
 <nav>
     <ul>
         <li>
-            <a href="#">Home</a>
+            <a href="../index.html">Home</a>
         </li>
         <li>
-            <a href="#">Discover</a>
+            <a href="discover.html">Discover</a>
         </li>
         <li>
-            <a href="#">Directory</a>
+            <a href="directory.html">Directory</a>
         </li>
         <li>
-            <a href="#">Join</a>
+            <a href="join.html">Join</a>
         </li>
         <li>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </li>
     </ul>
 </nav>
@@ -32,9 +37,13 @@
 <body>
     <section>
         <h1>Purpose</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sequi deserunt doloribus harum tenetur sed repudiandae maxime, vitae quae, fuga natus illum nam inventore reprehenderit qui blanditiis optio eligendi rem necessitatibus ullam. Voluptatibus
-            laudantium est, adipisci rerum tempora provident saepe nihil. Culpa distinctio rerum hic molestias voluptatem magni nam atque!
+        <p>The purpose of this website is to help educate people from different backgrounds and incomes with the skills they need to improve their lives in a positive wholesome way.
         </p>
+    </section>
+    <section>
+        <h1>Domain Name</h1>
+        <a href="lesson-3-index.html">www.learning-4-all.com
+        </a>
     </section>
     <section>
         <h1>Target Audience</h1>
@@ -53,8 +62,26 @@
     </section>
 </body>
 <footer>
-    <p>.:.Contact Information.:.</p>
-    <a href="#">Map link</a>
+    <div>
+        <h2>About Us</h2>
+        <ul>
+            <li><a href="#">Address Map Link</a></li>
+            <li><img src="#" alt="Facebook Icon"></li>
+            <li><img src="#" alt="Twitter Icon"></li>
+            <li><img src="#" alt="LinkedIn Icon"></li>
+            <li><img src="#" alt="Youtube Icon"></li>
+        </ul>
+    </div>
+    <div>
+        <h2>Contact Us</h2>
+        <ul>
+            <li>Phone: +1(801)555-5595</li>
+            <li>Email: nikkoletashby@gmail.com</li>
+            <li>Website privacy policy</li>
+        </ul>
+    </div>
+
+
 </footer>
 
 </html>
