--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
             <li>
                 <p>Lesson 03:</p>
-                <a href="lesson3/lesson-3-index.html">Website Planning</a><br>
+                <a href="lesson3/index.html">Website Planning</a><br>
                 <a href="lesson3/lesson_3_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
