--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lesson 3 for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <link rel="stylesheet" href="css\lesson-3-index.css" />
+    <link rel="stylesheet" href="css/small.css " />
+    <link rel="stylesheet " href="css/normalize.css ">
+    <link rel="stylesheet " href="css/medium.css ">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Sansita&family=Ubuntu&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 <header>
@@ -42,16 +48,24 @@
     </section>
     <section>
         <h1>Domain Name</h1>
-        <a href="lesson-3-index.html">www.learning-4-all.com
+        <a href="index.html">www.learning-4-all.com
         </a>
     </section>
     <section>
         <h1>Target Audience</h1>
+        <a href="#">Target Audience</a>
+        <p>a description of the target audience<br>two personas (see readings for help)<br>at least five listed scenarios (see readings)</p>
+
+    </section>
+    <section>
+        <h1>Color Scheme</h1>
+        <a href="#">Color Scheme</a>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum atque nihil, esse magnam iste laboriosam perspiciatis voluptatibus fuga? Ipsa atque asperiores sit adipisci. Quasi, accusamus minus. Exercitationem ratione quae, dicta eaque nemo
             voluptatibus perferendis nihil et laborum debitis. Saepe expedita modi recusandae magnam quibusdam pariatur quae itaque dolore numquam ex!</p>
     </section>
     <section>
-        <h1>Scenarios</h1>
+        <h1>Typography</h1>
+        <a href="#">Typography</a>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum atque nihil, esse magnam iste laboriosam perspiciatis voluptatibus fuga? Ipsa atque asperiores sit adipisci. Quasi, accusamus minus. Exercitationem ratione quae, dicta eaque nemo
             voluptatibus perferendis nihil et laborum debitis. Saepe expedita modi recusandae magnam quibusdam pariatur quae itaque dolore numquam ex!</p>
     </section>
