--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -17,7 +17,7 @@
 </head>
 <header>
     <h1>Learning 4 All</h1>
-    <!-- Image Size: 305 x 213 -->
+
     <img src="images\education-logo.jpg" alt="Logo">
 </header>
 <nav>
@@ -42,42 +42,44 @@
 
 <body>
     <section>
-        <h1>Purpose</h1>
+        <h2>Purpose</h2>
         <p>The purpose of this website is to help educate people from different backgrounds and incomes with the skills they need to improve their lives in a positive wholesome way.
         </p>
     </section>
     <section>
-        <h1>Domain Name</h1>
+        <h2>Domain Name</h2>
         <a href="index.html">www.learning-4-all.com
         </a>
     </section>
     <section>
-        <h1>Target Audience</h1>
-        <a href="#">Target Audience</a>
-        <p>a description of the target audience<br>two personas (see readings for help)<br>at least five listed scenarios (see readings)</p>
+        <h2>Target Audience</h2>
+        <a href="target-audience.html">Target Audience</a>
+        <p>a description of the target audience<br>two personas (see readings for help): Persona #1: Back-to-school employee, Persona #2: Fresh out of high school/return from mission<br>at least five listed scenarios (see readings): <br>1. User looking for
+            employment opportunities nearby that matches their skill-set.<br>2. Looking for educational opportunities to get better job<br>3.Looking up educational requirements for ideal job<br>4.Looking for educational opportunities nearby<br>5.Teaching
+            others skills required for a job.
+        </p>
 
     </section>
     <section>
-        <h1>Color Scheme</h1>
-        <a href="#">Color Scheme</a>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum atque nihil, esse magnam iste laboriosam perspiciatis voluptatibus fuga? Ipsa atque asperiores sit adipisci. Quasi, accusamus minus. Exercitationem ratione quae, dicta eaque nemo
-            voluptatibus perferendis nihil et laborum debitis. Saepe expedita modi recusandae magnam quibusdam pariatur quae itaque dolore numquam ex!</p>
+        <h2>Color Scheme</h2>
+        <a href="color-scheme.html">Color Scheme</a>
+        <p> --Primary_color: #153158; --Secondary_color: #85C6E2; --Accent1: #FFFFFF; --Accent2: #C2C2C2
+        </p>
     </section>
     <section>
-        <h1>Typography</h1>
-        <a href="#">Typography</a>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum atque nihil, esse magnam iste laboriosam perspiciatis voluptatibus fuga? Ipsa atque asperiores sit adipisci. Quasi, accusamus minus. Exercitationem ratione quae, dicta eaque nemo
-            voluptatibus perferendis nihil et laborum debitis. Saepe expedita modi recusandae magnam quibusdam pariatur quae itaque dolore numquam ex!</p>
+        <h2>Typography</h2>
+        <a href="typography.html">Typography</a>
+        <p>Sansita,Ubuntu, and sans-serif</p>
     </section>
     <section>
-        <h1>Site Map</h1>
+        <h2>Site Map</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum atque nihil, esse magnam iste laboriosam perspiciatis voluptatibus fuga? Ipsa atque asperiores sit adipisci. Quasi, accusamus minus. Exercitationem ratione quae, dicta eaque nemo
             voluptatibus perferendis nihil et laborum debitis. Saepe expedita modi recusandae magnam quibusdam pariatur quae itaque dolore numquam ex!</p>
     </section>
 </body>
 <footer>
     <div>
-        <h2>About Us</h2>
+        <h3>About Us</h3>
         <ul>
             <li><a href="#">Address Map Link</a></li>
             <li><img src="#" alt="Facebook Icon"></li>
@@ -87,7 +89,7 @@
         </ul>
     </div>
     <div>
-        <h2>Contact Us</h2>
+        <h3>Contact Us</h3>
         <ul>
             <li>Phone: +1(801)555-5595</li>
             <li>Email: nikkoletashby@gmail.com</li>
