--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,11 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Chamber for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Chamber</title>
+    <!-- STYLE SHEETS -->
+    <link href="css/normalize.css" rel="stylesheet">
+    <!-- phone-default -->
+    <link href="css/small.css" rel="stylesheet">
+    <!-- enhance-tablet -->
+    <link href="css/medium.css" rel="stylesheet">
+    <!-- enhance-desktop -->
+    <link href="css/large.css" rel="stylesheet">
 </head>
 <header>
     <nav>
         <ul>
-            <li><img src="#" alt="logo"></li>
+            <li><img src="images\education-logo.jpg" alt="logo"></li>
             <li>
                 <a href="#">Discover</a>
             </li>
@@ -24,8 +32,6 @@
             <li>
                 <a href="#">Contact</a>
             </li>
-        </ul>
-        <ul>
             <li>
                 <a href="#">
                     <img src="#" alt="facebook Icon"></a>
@@ -35,27 +41,28 @@
                     <img src="#" alt="LinkedIn Icon"></a>
             </li>
         </ul>
+
         <p>Insert Date Last Modified header</p>
     </nav>
 </header>
 
 <body>
-    <div>
+    <div class="event">
         <p>Item 1: Event</p>
     </div>
-    <div>
+    <div class="whether">
         <p>Item 2: Whether</p>
     </div>
-    <div>
+    <div class="join">
         <p>Item 3: Join</p>
     </div>
-    <div>
+    <div class="hero">
         <p>Item 4: Hero with Site Name and Call to Action</p>
     </div>
-    <div>
+    <div class="news">
         <p>Item 5: News Release</p>
     </div>
-    <div>
+    <div class="spotlight">
         <p>Item 6: Spotlights</p>
         <ul>
             <li>Spotlight 1</li>
@@ -69,7 +76,7 @@
 
 </body>
 <footer>
-    <img src="#" alt="logo">
+    <img src="images\education-logo.jpg" alt="logo">
     <ul>
         <li>Name of Chamber of Commerce</li>
         <li>Address of Location</li>
