--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,9 +17,10 @@
     <link href="css/large.css" rel="stylesheet">
 </head>
 <header>
+    <div><img src="images\education-logo.jpg" alt="logo"></div>
     <nav>
         <ul>
-            <li><img src="images\education-logo.jpg" alt="logo"></li>
+
             <li>
                 <a href="#">Discover</a>
             </li>
@@ -32,6 +33,9 @@
             <li>
                 <a href="#">Contact</a>
             </li>
+
+        </ul>
+        <ul>
             <li>
                 <a href="#">
                     <img src="#" alt="facebook Icon"></a>
@@ -47,29 +51,31 @@
 </header>
 
 <body>
-    <div class="event">
-        <p>Item 1: Event</p>
-    </div>
-    <div class="whether">
-        <p>Item 2: Whether</p>
-    </div>
-    <div class="join">
-        <p>Item 3: Join</p>
-    </div>
-    <div class="hero">
-        <p>Item 4: Hero with Site Name and Call to Action</p>
-    </div>
-    <div class="news">
-        <p>Item 5: News Release</p>
-    </div>
-    <div class="spotlight">
-        <p>Item 6: Spotlights</p>
-        <ul>
-            <li>Spotlight 1</li>
-            <li>Spotlight 2</li>
-            <li>Spotlight 3</li>
+    <div class="grid">
+        <div class="event">
+            <p>Item 1: Event</p>
+        </div>
+        <div class="weather">
+            <p>Item 2: Weather</p>
+        </div>
+        <div class="join">
+            <p>Item 3: Join</p>
+        </div>
+        <div class="hero">
+            <p>Item 4: Hero with Site Name and Call to Action</p>
+        </div>
+        <div class="news">
+            <p>Item 5: News Release</p>
+        </div>
+        <div class="spotlight">
+            <p>Item 6: Spotlights</p>
+            <ul>
+                <li>Spotlight 1</li>
+                <li>Spotlight 2</li>
+                <li>Spotlight 3</li>
 
-        </ul>
+            </ul>
+        </div>
     </div>
 
 
@@ -87,7 +93,7 @@
         <li>Icon with Location Map</li>
     </ul>
     <p>
-        c symbol 2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Modified: Insert Javascript date here month/day/year hour:minute:second</p>
+        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Modified: Insert Javascript date here month/day/year hour:minute:second</p>
 </footer>
 
 </html>
