--- a/chamber/index.html
+++ b/chamber/index.html
@@ -48,17 +48,17 @@
         </ul>
         <ul class="icons">
             <li>
-                <a href="#">
+                <a href="https://www.facebook.com/" target="_blank">
                     <img id="facebook" src="images\5296499_fb_facebook_facebook logo_icon.png" alt="facebook Icon"></a>
             </li>
             <li>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/nikkolet-ashby-418757161/" target="_blank">
                     <img id="linkedin" src="images\3225190_app_linkedin_logo_media_popular_icon.png" alt="LinkedIn Icon"></a>
             </li>
         </ul>
 
-        <p id="date">Last Updated: <span id="currentdate"></span></p>
-        <script src="js/script.js "></script>
+        <p id="p-date"><span id="currentdate"></span></p>
+
     </nav>
 </header>
 
@@ -96,16 +96,23 @@
 <footer>
     <img src="images\education-logo.jpg" alt="logo">
     <ul>
-        <li>Learning Chamber of Commerce</li>
-        <li>Address of Location</li>
+        <li>
+            <h1>Learning Chamber of Commerce</h1>
+        </li>
+        <li>Salt Lake Chamber,<br> 201 S Main St #2300,
+            <br>Salt Lake City,<br>UT 84111</li>
+        <li>
+            <p></p>
+        </li>
     </ul>
     <ul>
-        <li>Contact: Email</li>
-        <li>Contact: Phone Number</li>
+        <li>nikkoletashby@gmail.com</li>
+        <li>+1(801)231-3935</li>
         <li>Icon with Location Map</li>
     </ul>
     <p>
-        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Modified: Insert Javascript date here month/day/year hour:minute:second</p>
+        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="curdate"></span></p>
+    <script src="js/script.js"></script>
 </footer>
 
 </html>
