--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </li>
             <li>
                 <p>Lesson 04:</p>
-                <a href="lesson_4.html ">Chamber Home Page Build</a><br>
+                <a href="chamber\index.html">Chamber Home Page Build</a><br>
                 <a href="lesson_4_report.html ">Teaching and Learning Report</a>
             </li>
             <li>
