--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Sansita&family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/index.html">
+    <link rel="icon" href="/images/favicon.png">
 </head>
 <header>
     <div class="logo"><img class="logo-img" src="images\education-logo.jpg" alt="logo">
