--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="chamber\images\favicon.png">
+    <link rel="shortcut icon" href="images\2897341_future_portal_technology_teleport_warp_icon.png">
 </head>
 
 <body>
@@ -78,7 +78,7 @@
     </main>
     <footer>
 
-        <p>&copy; 2022 .:|:. Nikkolet S. Ashby .:|:. Utah</p>
+        <p>&copy;<span id="year"> </span> .:|:. Nikkolet S. Ashby .:|:. Utah</p>
         <p id="date">Last Updated: <span id="currentdate"></span></p>
         <script src="js/currentdate.js"></script>
 
