--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Nikkolet Ashby</h1>
     </header>
     <main>
-        <h2>WDD 230: Assignment Directory</h2>
+        <h2>WDD 230: Assignment Portal</h2>
 
         <ul>
             <li>
