--- a/index.html
+++ b/index.html
@@ -31,43 +31,38 @@
             </li>
             <li>
                 <p>Lesson 03:</p>
-                <a href="lesson3/index.html">Website Planning</a><br>
-                <a href="lesson3/lesson_3_report.html ">Teaching and Learning Report</a>
+                <a href="lesson3/index.html">Website Planning</a>
+
             </li>
             <li>
                 <p>Lesson 04:</p>
-                <a href="chamber\index.html">Chamber Home Page Build</a><br>
-                <a href="lesson_4_report.html ">Teaching and Learning Report</a>
+                <a href="chamber\index.html">Chamber Home Page Build</a>
+
             </li>
             <li>
                 <p>Lesson 05:</p>
-                <a href="lesson_5.html ">Chamber Home Page Continued</a><br>
-                <a href="lesson_5_report.html ">Teaching and Learning Report</a>
+                <a href="lesson_5.html ">Chamber Home Page Continued</a>
             </li>
             <li>
                 <p>Lesson 06:</p>
-                <a href="lesson_6.html ">Responsive Design</a><br>
-                <a href="lesson_6_report.html ">Teaching and Learning Report</a>
+                <a href="lesson_6.html ">Responsive Design</a>
+
             </li>
             <li>
                 <p>Lesson 07:</p>
-                <a href="lesson_7.html ">The Discover Page - Image Section</a><br>
-                <a href="lesson_7_report.html ">Teaching and Learning Report</a>
+                <a href="lesson_7.html ">The Discover Page - Image Section</a>
             </li>
             <li>
                 <p>Lesson 08:</p>
-                <a href="lesson_8.html ">Join Page</a><br>
-                <a href="lesson_8_report.html ">Teaching and Learning Report</a>
+                <a href="lesson_8.html ">Join Page</a>
             </li>
             <li>
                 <p>Lesson 09:</p>
-                <a href="lesson_9.html ">The Business Directory Page</a><br>
-                <a href="lesson_9_report.html ">Teaching and Learning Report</a>
+                <a href="lesson_9.html ">The Business Directory Page</a>
             </li>
             <li>
                 <p>Lesson 10:</p>
-                <a href="lesson_10.html ">Using the Weather API</a><br>
-                <a href="lesson_10_report.html ">Teaching and Learning Report</a>
+                <a href="lesson_10.html ">Using the Weather API</a>
             </li>
             <li>
                 <p>Lesson 11:</p>
