--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Chamber for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <meta name="description" content="Chamber Home Page for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Home</title>
     <!-- STYLE SHEETS -->
     <link href="css/normalize.css" rel="stylesheet">
