--- a/lesson5/bom.html
+++ b/lesson5/bom.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <meta name="description" content="DOM Manipulation for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>DOM Manipulation</title>
     <link rel="stylesheet" href="css/small.css " />
     <link rel="stylesheet " href="css/normalize.css ">
     <link rel="stylesheet " href="css/medium.css ">
+    <link rel="stylesheet " href="css/large.css ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -17,19 +18,31 @@
 </head>
 
 <body>
-    <h1>📘 Book of Mormon - Top 25</h1>
+    <header>
+        <h1>📘 Book of Mormon - Top 25</h1>
+        <form id="new-chapter-form" class="input">
+            <input type="text" id="new-chapter-input" placeholder="Alma 5" />
+            <input type="submit" id="new-chapter-submit" value="new chapter" />
+        </form>
+    </header>
     <main>
-        <div class="input">
-            <label>Enter Book and Chapter<br>
-                <input type="text" id="favchap" placeholder="Alma 5" required></label>
-            <button type="submit">Add Chapter</button>
-        </div>
-        <div class="listcontainer">
-            <ul class="list">
-            </ul>
-        </div>
+        <section class="listcontainer">
+            <h2>Chapters</h2>
+            <div id="chapters">
+                <div class="chapter">
+                    <div class="content">
+                        <input type="text" class="text" value="my favorite chapter" readonly/>
+                    </div>
+                    <div class="actions">
+                        <button class="edit">Edit</button>
+                        <button class="delete">Delete</button> </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <script src="js/script.js"></script>
 </body>
-<footer></footer>
+<footer>
+</footer>
 
 </html>
