--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             </li>
             <li>
                 <p>Lesson 05:</p>
-                <a href="lesson_5.html ">Chamber Home Page Continued</a>
+                <a href="#">Chamber Home Page Continued</a> =
+                <a href="lesson5/bom.html">DOM Manipulation Activity</a>
             </li>
             <li>
                 <p>Lesson 06:</p>
