--- a/lesson5/bom.html
+++ b/lesson5/bom.html
@@ -20,29 +20,27 @@
 <body>
     <header>
         <h1>📘 Book of Mormon - Top 25</h1>
-        <form id="new-chapter-form" class="input">
-            <input type="text" id="new-chapter-input" placeholder="Alma 5" />
-            <input type="submit" id="new-chapter-submit" value="new chapter" />
+        <form id="new-chapter-form">
+            <input type="text" id="new-chapter-input" name="new-chapter-input" placeholder=" Ex. Alma 5 " />
+            <input type="submit" id="new-chapter-submit" value="new chapter " />
         </form>
     </header>
     <main>
         <section class="listcontainer">
             <h2>Chapters</h2>
             <div id="chapters">
-                <div class="chapter">
-                    <div class="content">
-                        <input type="text" class="text" value="my favorite chapter" readonly/>
+                <!-- <div class="chapter ">
+                    <div class="content ">
+                        <input type="text " class="text " value="my favorite chapter " readonly/>
                     </div>
-                    <div class="actions">
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button> </div>
-                </div>
+                    <div class="actions ">
+                        <button class="edit ">Edit</button>
+                        <button class="delete ">Delete</button> </div>
+                </div> -->
             </div>
         </section>
     </main>
-    <script src="js/script.js"></script>
+    <script src="js\script.js"></script>
 </body>
-<footer>
-</footer>
 
 </html>
