--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
             <li>
                 <p>Lesson 05:</p>
-                <a href="#">Chamber Home Page Continued</a> =
+                <a href="#">Chamber Home Page Continued</a><br>
                 <a href="lesson5/bom.html">DOM Manipulation Activity</a>
             </li>
             <li>
