--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Nikkolet Ashby - Assignments Portal</title>
-    <link rel="stylesheet" href="css/small.css " />
-    <link rel="stylesheet " href="css/normalize.css ">
-    <link rel="stylesheet " href="css/medium.css ">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet " href="css/normalize.css">
+    <link rel="stylesheet " href="css/medium.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images\2897341_future_portal_technology_teleport_warp_icon.png">
+    <link rel="shortcut icon" href="images/2897341_future_portal_technology_teleport_warp_icon.png">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
             </li>
             <li>
                 <p>Lesson 04:</p>
-                <a href="chamber\index.html">Chamber Home Page Build</a>
+                <a href="chamber/index.html">Chamber Home Page Build</a>
 
             </li>
             <li>
@@ -74,7 +74,7 @@
     </main>
     <footer>
 
-        <p>&copy;<span id="year"> </span> .:|:. Nikkolet S. Ashby .:|:. Utah</p>
+        <p>&copy;<span id="year"></span> .:|:. Nikkolet S. Ashby .:|:. Utah</p>
         <p id="date">Last Updated: <span id="currentdate"></span></p>
         <script src="js/currentdate.js"></script>
 
