--- a/response-menu/start-navigation/start-navigation/index.html
+++ b/response-menu/start-navigation/start-navigation/index.html
@@ -39,7 +39,7 @@
     <!-- NAVIGATION HERE -->
     <nav>
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
-        <ul id="primaryNav" class="open">
+        <ul id="primaryNav">
             <li><a href="# ">Home</a></li>
             <li><a class="active" href="#">Products</a></li>
             <li><a href="# ">Location</a></li>
