--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -23,7 +23,7 @@
 <nav>
     <ul>
         <li>
-            <a href="../index.html">Home</a>
+            <a href="https://nikkolet.github.io/wdd230/lesson3/index.html">Home</a>
         </li>
         <li>
             <a href="discover.html">Discover</a>
