--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,7 +21,7 @@
     <link rel="icon" href="/images/favicon.png">
 </head>
 <header>
-    <div class="logo"><img class="logo-img" src="images\education-logo.jpg" alt="logo">
+    <div class="logo"><img class="logo-img" src="images/education-logo.jpg" alt="logo">
         <ul>
             <li>
                 <h1>Learning</h1>
@@ -51,11 +51,11 @@
         <ul class="icons">
             <li>
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img id="facebook" src="images\5296499_fb_facebook_facebook logo_icon.png" alt="facebook Icon"></a>
+                    <img id="facebook" src="images/5296499_fb_facebook_facebook logo_icon.png" alt="facebook Icon"></a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/nikkolet-ashby-418757161/" target="_blank">
-                    <img id="linkedin" src="images\3225190_app_linkedin_logo_media_popular_icon.png" alt="LinkedIn Icon"></a>
+                    <img id="linkedin" src="images/3225190_app_linkedin_logo_media_popular_icon.png" alt="LinkedIn Icon"></a>
             </li>
         </ul>
 
@@ -96,7 +96,7 @@
 
 </body>
 <footer>
-    <img class="logo-img" src="images\education-logo.jpg" alt="logo">
+    <img class="logo-img" src="images/education-logo.jpg" alt="logo">
     <ul>
         <li>
             <h1>Learning Chamber of Commerce</h1>
