--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,16 +21,16 @@
     <link rel="icon" href="/images/favicon.png">
 </head>
 <header>
-    <div class="logo"><img class="logo-img" src="images/education-logo.jpg" alt="logo">
-        <ul>
-            <li>
-                <h1>Learning</h1>
-                <p>Chamber of Commerce</p>
-            </li>
-        </ul>
+    <img class="logo-img" id="header-img" src="images/education-logo.jpg" alt="logo">
+    <ul class="company">
+        <li>
+            <h1>Learning</h1>
+            <p>Chamber of Commerce</p>
+        </li>
+    </ul>
 
-    </div>
-    <nav>
+
+    <nav class="nav">
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
         <ul id="primaryNav" class="open">
 
