--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,26 +67,32 @@
 <body>
     <div class="grid">
         <div class="event">
-            <p>Item 1: Event</p>
+            <h2>Item 1: Event</h2>
         </div>
         <div class="weather">
-            <p>Item 2: Weather</p>
+            <h2>Item 2: Weather</h2>
         </div>
         <div class="join">
-            <p>Item 3: Join</p>
+            <h2>Item 3: Join</h2>
         </div>
         <div class="hero">
-            <p>Item 4: Hero with Site Name and Call to Action</p>
+            <h2>Item 4: Hero with Site Name and Call to Action</h2>
         </div>
         <div class="news">
-            <p>Item 5: News Release</p>
+            <h2>Item 5: News Release</h2>
         </div>
         <div class="spotlight">
-            <p>Item 6: Spotlights</p>
-            <ul>
-                <li>Spotlight 1</li>
-                <li>Spotlight 2</li>
-                <li>Spotlight 3</li>
+
+            <tr>
+                <td>Spotlight 1</td>
+            </tr>
+            <tr>
+                <td>Spotlight 2</td>
+            </tr>
+            <tr>
+                <td>Spotlight 3</td>
+            </tr>
+
 
             </ul>
         </div>
