--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
 
     <nav class="nav">
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
-        <ul id="primaryNav" class="open">
+        <ul id="primaryNav">
 
             <li>
                 <a class="active" href="#">Discover</a>
@@ -66,10 +66,11 @@
 
 <body>
     <div class="grid">
-        <div class="event">
+        <div class="event large-div">
             <h2>Item 1: Event</h2>
+
         </div>
-        <div class="weather">
+        <div class="weather large-div">
             <h2>Item 2: Weather</h2>
         </div>
         <div class="join">
@@ -82,17 +83,25 @@
             <h2>Item 5: News Release</h2>
         </div>
         <div class="spotlight">
+            <div id="spot1">
+                <h2>Spotlight 1</h2>
+            </div>
+            <div id="spot2">
+                <h2>Spotlight 2</h2>
+            </div>
+            <div id="spot3">
+                <h2>Spotlight 3</h2>
+            </div>
+        </div>
 
-            <tr>
-                <td>Spotlight 1</td>
-            </tr>
-            <tr>
-                <td>Spotlight 2</td>
-            </tr>
-            <tr>
-                <td>Spotlight 3</td>
-            </tr>
-            </ul>
+        <div class="medium-div">
+            <div class="event">
+                <h2>Item 1: Event</h2>
+
+            </div>
+            <div class="weather">
+                <h2>Item 2: Weather</h2>
+            </div>
         </div>
     </div>
 
@@ -101,14 +110,13 @@
 </body>
 <footer>
     <img class="logo-img" src="images/education-logo.jpg" alt="logo">
-    <ul>
+    <ul class="footer-company">
         <li>
             <h1>Learning Chamber of Commerce</h1>
         </li>
-        <li>Salt Lake Chamber,<br> 201 S Main St #2300,
-            <br>Salt Lake City,<br>UT 84111</li>
         <li>
-            <p></p>
+            <p>Salt Lake Chamber,<br> 201 S Main St #2300,
+                <br>Salt Lake City,<br>UT 84111</p>
         </li>
     </ul>
     <ul>
