--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,14 +18,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Sansita&family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="icon" href="/images/favicon.png">
+    <link rel="icon" href="images/2730327_colour_harry_hogwarts_house_potter_icon.png">
 </head>
 <header>
-    <img class="logo-img" id="header-img" src="images/education-logo.jpg" alt="logo">
+    <img class="logo-img" id="header-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
     <ul class="company">
         <li>
-            <h1>Learning</h1>
-            <p>Chamber of Commerce</p>
+            <h1>Harry Potter</h1>
+            <p>and the Chamber of Commerce</p>
         </li>
     </ul>
 
@@ -74,20 +74,37 @@
             <h2>Item 2: Weather</h2>
         </div>
         <div class="join">
-            <h2>Item 3: Join</h2>
+
+            <button class="button"><a href="#">Join Us!</a></button>
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, dignissimos dicta voluptates omnis nam recusandae doloribus mollitia? Modi hic facere ullam a asperiores, vero nemo numquam praesentium, dolor ratione quisquam?</p>
         </div>
         <div class="hero">
             <h2>Item 4: Hero with Site Name and Call to Action</h2>
+            <img src="images/istockphoto-898315306-612x612.jpg" alt="Chamber of Commerce Homebase">
+
         </div>
         <div class="news">
             <h2>Item 5: News Release</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro voluptas maxime, fuga ex sapiente repudiandae fugiat ullam consequuntur corporis repellendus dolor, eos illum non perspiciatis aliquid voluptatem commodi dicta consequatur? Magnam
+                earum voluptate tempore dolor quis perferendis accusantium nobis sequi asperiores, praesentium iure reiciendis fugit, doloribus nesciunt veniam, debitis voluptatum tenetur totam. Ipsum expedita sed saepe nulla libero, eum enim? Animi in
+                aperiam enim rem illo? Ratione rem voluptatibus repellendus quidem doloribus, excepturi quia ab beatae expedita eligendi odit eos quas, qui, officia dolorum suscipit ad nisi nesciunt inventore tempore!
+            </p>
         </div>
         <div class="spotlight">
             <div id="spot1">
                 <h2>Spotlight 1</h2>
+                <img src="images/360_F_487009062_NZdRcz4Zjbqda8lVGEbdysGbGRvWrtge.jpg" alt="hogwarts train">
+                <p>We're here to get you at Platform 9 3/4</p>
             </div>
             <div id="spot2">
                 <h2>Spotlight 2</h2>
+                <img src="images/4ghv5u3jpu.jpg" alt="howarts classroom">
+                <p>An after school transfiguration program.</p>
+                <div class="spot2-contact">
+                    <p>minerva-mcgonagall@hogwarts-edu.com</p>
+                    <p></p>
+                </div>
             </div>
             <div id="spot3">
                 <h2>Spotlight 3</h2>
@@ -109,7 +126,7 @@
 
 </body>
 <footer>
-    <img class="logo-img" src="images/education-logo.jpg" alt="logo">
+    <img class="logo-img footer-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
     <ul class="footer-company">
         <li>
             <h1>Learning Chamber of Commerce</h1>
@@ -119,7 +136,7 @@
                 <br>Salt Lake City,<br>UT 84111</p>
         </li>
     </ul>
-    <ul>
+    <ul class="contact">
         <li>nikkoletashby@gmail.com</li>
         <li>+1(801)231-3935</li>
         <li class="map">
@@ -127,7 +144,7 @@
             <p>Map Location</p>
         </li>
     </ul>
-    <p>
+    <p class="js">
         &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="curdate"></span></p>
     <script src="js/script.js"></script>
 </footer>
