--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,11 +51,11 @@
         <ul class="icons">
             <li>
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img id="facebook" src="images/5296499_fb_facebook_facebook logo_icon.png" alt="facebook Icon"></a>
+                    <img id="facebook" src="images/" alt="facebook Icon"></a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/nikkolet-ashby-418757161/" target="_blank">
-                    <img id="linkedin" src="images/3225190_app_linkedin_logo_media_popular_icon.png" alt="LinkedIn Icon"></a>
+                    <img id="linkedin" src="images/facebook-icon.png" alt="LinkedIn Icon"></a>
             </li>
         </ul>
 
@@ -76,11 +76,11 @@
                 <form id="wind">
                     <label for="Temp">Average Temperature:
                 <input id="Temp" type="number" name="Temp">
-              </label><br>
+                </label><br>
                     <label for="windSpeed">Wind Speed:
                 <input id="windSpeed" type="number" name="windSpeed">
-              </label><br>
-                    <input id="button" type="button" value="Submit"></input>
+                </label><br>
+                    <input id="button" type="button" value="Submit">
                 </form><br> Wind Chill: <span id="windChill"></span>&deg;f
             </p>
         </div>
@@ -134,9 +134,6 @@
             </div>
         </div>
     </div>
-
-
-
 </body>
 <footer>
     <img class="logo-img footer-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
