--- a/chamber/index.html
+++ b/chamber/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="join">
 
-            <button class="button"><a href="#">Join Us!</a></button>
+            <a href="#"></a><button class="button">Join Us!</button></a>
 
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, dignissimos dicta voluptates omnis nam recusandae doloribus mollitia? Modi hic facere ullam a asperiores, vero nemo numquam praesentium, dolor ratione quisquam?</p>
         </div>
@@ -150,7 +150,7 @@
         <li>nikkoletashby@gmail.com</li>
         <li>+1(801)231-3935</li>
         <li class="map">
-            <a href="https://www.google.com/maps/place/Salt+Lake+Chamber/@40.7645262,-111.892769,17z/data=!3m2!4b1!5s0x87528a3aa97113a7:0xdb61b5943e1a7aa1!4m5!3m4!1s0x8752f513d6f6ab15:0x4be5eda424cce15a!8m2!3d40.7645222!4d-111.8905803"><img id="map" src="images\pin.png" alt="Location Map"></a>
+            <a href="https://www.google.com/maps/place/Salt+Lake+Chamber/@40.7645262,-111.892769,17z/data=!3m2!4b1!5s0x87528a3aa97113a7:0xdb61b5943e1a7aa1!4m5!3m4!1s0x8752f513d6f6ab15:0x4be5eda424cce15a!8m2!3d40.7645222!4d-111.8905803"><img id="map" src="images/pin.png" alt="Location Map"></a>
             <p>Map Location</p>
         </li>
     </ul>
