--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
             </li>
             <li>
                 <p>Lesson 06:</p>
-                <a href="lesson_6.html ">Responsive Design</a>
+                <a href="chamber\index.html ">Responsive Design</a>
 
             </li>
             <li>
                 <p>Lesson 07:</p>
-                <a href="lesson_7.html ">The Discover Page - Image Section</a>
+                <a href="lazyloading.html ">The Discover Page - Image Section</a>
             </li>
             <li>
                 <p>Lesson 08:</p>
