--- a/index.html
+++ b/index.html
@@ -41,21 +41,22 @@
             </li>
             <li>
                 <p>Lesson 05:</p>
-                <a href="chamber\index.html">Chamber Home Page Continued</a><br>
+                <a href="chamber/index.html">Chamber Home Page Continued</a><br>
                 <a href="lesson5/bom.html">DOM Manipulation Activity</a>
             </li>
             <li>
                 <p>Lesson 06:</p>
-                <a href="chamber\index.html ">Responsive Design</a>
+                <a href="chamber/index.html ">Responsive Design</a>
 
             </li>
             <li>
                 <p>Lesson 07:</p>
-                <a href="lazyloading.html ">The Discover Page - Image Section</a>
+                <a href="#">The Discover Page - Image Section</a>
+                <a href="lesson7/lazyloading.html">Activity: Progressive Loading of Images</a>
             </li>
             <li>
                 <p>Lesson 08:</p>
-                <a href="lesson_8.html ">Join Page</a>
+                <a href="lesson_8.html">Join Page</a>
             </li>
             <li>
                 <p>Lesson 09:</p>
